3.OnCall/oncall/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oncall
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: oncall
  ports:
    - protocol: TCP
      name: app
      port: 8080
      targetPort: 8080
    - protocol: TCP
      name: metrics
      port: 8000
      targetPort: 8000
